--- a/index.html
+++ b/index.html
@@ -4,3 +4,12 @@ hello word
 </h1>
 </html>
 <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fxinmeti.co&width=90&layout=button_count&action=like&size=small&show_faces=true&share=true&height=46&appId" width="90" height="46" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v2.11';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<div class="fb-comments" data-href="https://developers.facebook.com/docs/plugins/comments#configurator" data-numposts="5"></div
